--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -49,8 +49,9 @@ table {
 
 /* custom styles */
 .container{
-	max-width: 100%;
-	padding: 0 5%;
+	max-width: 1100px;
+	margin: 0 auto;
+	padding: 0 30px;
 }
 .flex{
 	display: flex;
@@ -73,10 +74,11 @@ h2{
 	width: 25%;
 }
 h6{
-	font-size: 11px;
+	font-size: 14px;
 	text-align: center;
 	padding-top: 10px;
-	font-weight: 500;
+	font-weight: 700;
+	color: #bababa;
 }
 article{
 	padding: 40px 100px;
@@ -100,25 +102,33 @@ p{
 	color: white;
 }
 
-.header-image{
-	width: 90%;
+ .header-image{
+	width: 100%;
 	height: 450px;
 	position: absolute;
-	z-index: -1;
+	z-index: -1; 
 }
 .header-nav{
-    text-align: center;
+	width: 100%;
 	padding: 20px 0;
+	justify-content: center;
+}
+.header-nav-a{
+	width: 30px;
+	height: 30px;
+	background-color: white;
+	border-radius: 50%;
+	justify-content: center;
+	margin-right: 10px; 
 }
 .header-nav a{
     text-decoration: none;
-    font-size: 25px;
-	padding-right: 15px;
-	color: white;
+    font-size: 12px;
+	color: #707070;
 }
 .header-logo-div{
 	margin: 0 auto;
-	width: 90%;
+	width: 100%;
 	background-color: white;
 	height: 64px;
 	display: flex;
@@ -140,6 +150,7 @@ p{
 	text-decoration: none;
 	margin-right: 20px;
 	font-size: 15px;
+	color: #939393;
 }
 
 .home{
@@ -162,6 +173,9 @@ p{
 	background-color: #ea523e;
 	vertical-align: middle;
 	margin-top: 17px;
+	border-radius: 5px;
+	line-height: 32px;
+	font-size: 12px;
 }
 .header-dot{
 	text-align: center;
@@ -178,14 +192,20 @@ p{
 .dot1{
 	background-color:#181818 ;
 }
+body{
+	font-family: 'Oswald', sans-serif;
+}
 /* main */
+section{
+	margin: 140px 0 30px 0;
+}
 
-/* article1 */
+/* section1 */
 .rectangle4{
-	margin-top: 70px;
+	margin-top: 40px;
 }
 .rectangle{
-	width: 20%;
+	width: 23%;
 	height: 200px;
 	background-color: #5cbd9d;
 	font-size: 30px;
@@ -202,7 +222,7 @@ p{
 	background-color: #68cd73;
 }
 
- /* ARTICLE 2 */
+ /* section 2 */
 .artical1-img{
 	flex-wrap: wrap;
 	margin-top: 40px;
@@ -212,7 +232,7 @@ p{
 	padding: 10px;
 }
 
-/* ARTICLE 3 */
+/* section 3 */
 .article-3{
 	margin-top: 40px;
 }
@@ -221,7 +241,7 @@ p{
 	border-radius: 50%;
 }
 
-/* ARTICLE 4 */
+/* section 4 */
 h3{
 	text-align: center;
 	font-weight: 600;
@@ -266,14 +286,12 @@ h5{
 	width: 80%;
 }
 
-/* ARTICLE 5 */
+/* section 5 */
 .hr3{
 	width: 15%;
 }
 .map{
-	width: 100%;
-	padding: 50px 0;
-	height: 500px;
+	margin: 70px 0 50px 0;
 }
 .article5{
 	width: 60%;
@@ -320,6 +338,9 @@ footer{
 }
 
 /* GALLERY */
+.gallery-main{
+	margin-top: -140px;
+}
 /* aside */
 .aside-fixed{
 	position: fixed;
@@ -362,11 +383,19 @@ h4{
 	color: white;
 	padding-bottom: 15px;
 }
+.gallery-nav{
+	justify-content: left;
+}
+.g-nav{
+	background-color: #ea513e;
+	border: 1px solid white;
+	display: flex;
+	align-items: center;
+}
 .aside2 a{
 	color: white;
 	text-decoration: none;
-	margin-right: 20px;
-	font-size: 24px;
+	font-size: 12px;
 }
 .aside2 nav{
 	margin-top: 20px;
